--- a/v0/index.html
+++ b/v0/index.html
@@ -36,7 +36,6 @@
 	
 	<script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
 	<script src="js/bootstrap.min.js"></script>
-	<script src="js/map.js"></script>
 	<script src="http://maps.google.com/maps/api/js?sensor=false"></script>
 	
 
@@ -50,23 +49,23 @@
 			<!-- ===========================
 			navbar
 			============================ -->
-					<nav class="navbar navbar-fixed-top">
-						<div class="container">
-							<div class="navbar-header">
-								<i class="navbar-brand marg1 navbar-spec fa fa-user hidden-xs"></i>
-								<a class="navbar-brand marg navbar-spec">Платонов Александр</a>
-								<i class="navbar-brand marg1 navbar-spec fa fa-desktop hidden-xs"></i>
-								<a class="navbar-brand marg navbar-spec hidden-xs "> Системное администрирование</a>
-								<i class="navbar-brand marg1 navbar-spec fa fa-file-o hidden-xs hidden-sm hidden-md"></i>
-								<a class="navbar-brand marg navbar-spec hidden-xs hidden-sm hidden-md"> WEB разработка</a>
-								<button type="button" onClick="window.print()"  class="printbtn btn btn-default navbar-btn hidden-print">Распечатать</button>
-							</div>
-						</div>
-					</nav>
-					<div class="clearfix"></div>
-					<!-- ===========================
-					Content
-					============================ -->
+			<nav class="navbar navbar-fixed-top">
+				<div class="container">
+					<div class="navbar-header">
+						<i class="navbar-brand marg1 navbar-spec fa fa-user hidden-xs"></i>
+						<a class="navbar-brand marg navbar-spec">Платонов Александр</a>
+						<i class="navbar-brand marg1 navbar-spec fa fa-desktop hidden-xs"></i>
+						<a class="navbar-brand marg navbar-spec hidden-xs "> Системное администрирование</a>
+						<i class="navbar-brand marg1 navbar-spec fa fa-file-o hidden-xs hidden-sm hidden-md"></i>
+						<a class="navbar-brand marg navbar-spec hidden-xs hidden-sm hidden-md"> WEB разработка</a>
+						<button type="button" onClick="window.print()"  class="printbtn btn btn-default navbar-btn hidden-print">Распечатать</button>
+					</div>
+				</div>
+			</nav>
+			<div class="clearfix"></div>
+		<!-- ===========================
+        Content
+        ============================ -->
 			<div id="content" class="row">
 				    <div class="col-xs-4 col-sm-4 col-md-2 col-lg-2">
 					  <!--Sidebar content-->
@@ -123,34 +122,33 @@
 					<div class="MainContent col-xs-12 col-sm-6 col-md-12 col-lg-12">
 					  <!--Body content-->
         
-					
+            <!-- Button to trigger modal -->
+            <p><a href="#mapmodals" data-toggle="modal" role="button"><img src="04_maps.png" width="64" height="64" alt="map Venice" title="click to open Map"></a></p>  
+    </div>
+
+ 
+<!-- Modal -->
+  <div class="modal fade" id="mapmodals">
+    <div class="modal-dialog modal-lg">
+      <div class="modal-content">
+        <div class="modal-header">
+          <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+          <h4 class="modal-title">Peggy Guggenheim Collection - Venice</h4>
+        </div>
+        <div class="modal-body">
+          <div id="map-container"></div>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="close" data-dismiss="modal">Close</button>
+        </div>
+      </div><!-- /.modal-content -->
+    </div><!-- /.modal-dialog -->
+  </div><!-- /.modal -->
+
 					</div>
-
- 
-
-
-
- 
+			</div>
+		
 
 		<div class="clearfix"></div>
-		
-				<div class="modal fade" id="mapmodals">
-				<div class="modal-dialog modal-lg">
-				  <div class="modal-content">
-					<div class="modal-header">
-					  <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-					  <h4 class="modal-title">Peggy Guggenheim Collection - Venice</h4>
-					</div>
-					<div class="modal-body">
-					  <div id="map-container"></div>
-					</div>
-					<div class="modal-footer">
-					  <button type="button" class="close" data-dismiss="modal">Close</button>
-					</div>
-				  </div><!-- /.modal-content -->
-				</div><!-- /.modal-dialog -->
-			  </div><!-- /.modal -->
-			</div>  
-		</div>
 </body>
 </html>
