--- a/v0/index.html
+++ b/v0/index.html
@@ -112,7 +112,7 @@
 							</div>
 					<div class="MainContent col-xs-12 col-sm-8 col-md-5 col-lg-5">
 					  <!--Body content-->
-					<div class="section-head">
+					<div class="head-col">
 											<a class="fa fa-book navbar-brand Btitle"></a>
 											<a class="navbar-brand">Обучение</a>
 											<div class="clearfix"></div>
