--- a/v0/index.html
+++ b/v0/index.html
@@ -152,8 +152,35 @@
 					</div>
 					<div class="MainContent col-xs-12 col-sm-6 col-md-5 col-lg-5">
 					  <!--Body content-->
-
-
+											<div class="head-col">
+												<a class="fa fa-users navbar-brand Btitle"></a>
+												<a class="navbar-brand ctitle">Опыт работы</a>
+												<div class="clearfix"></div>
+						</div>
+							<span class="label label-success">2015</span>
+						  <div class="ltarget">Freelance</div>
+						  <div class="panel panel-default">
+								<div class="panel-heading">job</div>
+								<div class="panel-body">job</div>
+						  </div>
+						  							<span class="label label-success">2015</span>
+						  <div class="ltarget">Freelance</div>
+						  <div class="panel panel-default">
+								<div class="panel-heading">job</div>
+								<div class="panel-body">job</div>
+						  </div>
+						  							<span class="label label-success">2015</span>
+						  <div class="ltarget">Freelance</div>
+						  <div class="panel panel-default">
+								<div class="panel-heading">job</div>
+								<div class="panel-body">job</div>
+						  </div>
+						  							<span class="label label-success">2015</span>
+						  <div class="ltarget">Freelance</div>
+						  <div class="panel panel-default">
+								<div class="panel-heading">job</div>
+								<div class="panel-body">job</div>
+						  </div>
 					</div>
 					<div class="MainContent col-xs-12 col-sm-6 col-md-12 col-lg-12">
 					  <!--Body content-->
