--- a/v0/index.html
+++ b/v0/index.html
@@ -175,7 +175,7 @@
 								<div class="panel-heading">job</div>
 								<div class="panel-body">job</div>
 						  </div>
-						  							<span class="label label-success">2015</span>
+						  <span class="label label-success">2015</span>
 						  <div class="ltarget">Freelance</div>
 						  <div class="panel panel-default">
 								<div class="panel-heading">job</div>
@@ -184,6 +184,13 @@
 					</div>
 					<div class="MainContent col-xs-12 col-sm-6 col-md-12 col-lg-12">
 					  <!--Body content-->
+					  
+					  	<span class="label label-success">///</span>
+						  <div class="ltarget">////</div>
+						  <div class="panel panel-default">
+								<div class="panel-heading">//</div>
+								<div class="panel-body">///</div>
+						  </div>
 					</div>
 					<!-- Modal -->
 					  <div class="modal fade" id="mapmodals">
