--- a/v0/index.html
+++ b/v0/index.html
@@ -71,7 +71,7 @@
 				    <div class="col-xs-12 col-sm-4 col-md-2 col-lg-2">
 					  <!--Sidebar content-->
 								<div id="contacts" class="info">
-									<img class="pofilepic hidden-print" src="https://pp.vk.me/c618827/v618827774/19b26/htp5L5QdLiA.jpg" alt="">
+									<img class="pofilepic hidden-print" src="img/photo.png" alt="">
 										<div id="personal-info">								
 											<div class="each btn btn-default cbtn visible-print-block">
 												<i class="fa fa-user"></i>
