--- a/404.html
+++ b/404.html
@@ -70,7 +70,7 @@
 					<div class="jumbotron">
 					  <h1>Страница не найдена</h1>
 					  <p>Вероятно Вы попали не туда</p>
-					  <p><a class="btn btn-primary btn-lg" href="http://pingall.ru/" role="button">Перейти в блог</a></p><p><a class="btn btn-primary btn-lg" href="http://pingall.ru/blog" role="button">Открыть резюме</a></p>
+					  <p><a class="btn btn-primary btn-lg" href="http://pingall.ru/" role="button">Перейти в блог</a></p><p><a class="btn btn-primary btn-lg" href="http://pingall.ru/resume" role="button">Открыть резюме</a></p>
 					</div>
 					
 					</div>
