--- a/index.html
+++ b/index.html
@@ -10,23 +10,24 @@
 	<link rel="stylesheet" href="css/style.css"> <!-- Resource style -->
 	<link rel="stylesheet" href="css/bootstrap.css"> <!-- Resource style -->
 	<link rel="stylesheet" href="css/bootstrap-theme.css"> <!-- Resource style -->
+	<link rel="stylesheet" href="css/custom.css"> <!-- Resource style -->
 	<script src="js/modernizr.js"></script> <!-- Modernizr -->
-  	<script src="js/bootstrap.js"></script> <!-- bootstrap -->
-	<title>Presentation Slideshow | CodyHouse</title>
+
+	<title>Анализ безопасности HTML5 | Платонов А.А.</title>
 </head>
 <body>
 	<div class="cd-slideshow-wrapper">
 		<nav class="cd-slideshow-nav">
 			<button class="cd-nav-trigger">
-				Open Nav
+				Навигация
 				<span aria-hidden="true"></span>
 			</button>
 			
 			<div class="cd-nav-items">
 				<ol>
-					<li><a href="#slide-1">Slide 1</a></li>
+					<li><a href="#slide-1">Слайд 1</a></li>
 					<li>
-						<a href="#slide-2">Slide 2</a>
+						<a href="#slide-2">Цель и задачи исследования</a>
 						<ol class="sub-nav">
 							<li><a href="#slide-2">Slide 2 - Sub 1</a></li>
 							<li><a href="#slide-2">Slide 2 - Sub 2</a></li>
@@ -55,11 +56,10 @@
 						<div class="col-xs-12 ">
 						Федеральное государственное автономное образовательное учреждение высшего образования </br> САНКТ-ПЕТЕРБУРГСКИЙ НАЦИОНАЛЬНЫЙ ИССЛЕДОВАТЕЛЬСКИЙ УНИВЕРСИТЕТ ИНФОРМАЦИОННЫХ ТЕХНОЛОГИЙ, МЕХАНИКИ И ОПТИКИ</div>
 						</div>
-						<div class="test"></p></div>
-						<h2>Анализ безопасности HTML5</h2>
-						<p>Платонов Александр, группа s4200</p>
-
-						<svg version="1.1" id="icon-keyboard" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="186px" height="60px" viewBox="0 0 186 60" enable-background="new 0 0 186 60" xml:space="preserve">
+						<div class="row">
+						<div class="col-xs-12 ">
+						<h2>Анализ безопасности HTML5</h2></div>
+												<svg version="1.1" id="icon-keyboard" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="186px" height="60px" viewBox="0 0 186 60" enable-background="new 0 0 186 60" xml:space="preserve">
 						<path fill="none" stroke="#000000" stroke-width="2" stroke-miterlimit="10" d="M119,59H67c-1.10457,0-2-0.89543-2-2V36
 							c0-1.10457,0.89543-2,2-2h52c1.10457,0,2,0.89543,2,2v21C121,58.10457,120.10457,59,119,59z"/>
 						<path fill="none" stroke="#000000" stroke-width="2" stroke-miterlimit="10" d="M119,26H67c-1.10457,0-2-0.89543-2-2V3
@@ -77,6 +77,20 @@
 						<path fill="#000000" d="M160.97197,46.04309l-7.26891-3.23062C153.37242,42.66552,153,42.90755,153,43.26938v6.46124
 							c0,0.36183,0.37242,0.60386,0.70306,0.45691l7.26891-3.23062C161.36787,46.78095,161.36787,46.21905,160.97197,46.04309z"/>
 						</svg>
+						<p>(Специальность: 09.04.01 - Системное администрирование аппаратно-программных комплексов и сетей)</p></h4
+						</div>
+						<div class="row titilemargin">
+						<div class="col-xs-4 col-xs-offset-8 discrrab">
+						<h4><p>Выполнил: студент группы s4200<br>Платонов Александр</p></h4>
+						<h4><p>Научный руководитель:<br>Мартынов Владимир Павлович</p></h4></div>
+						</div>
+						<div class="row pnumber " >
+						<div class="col-xs-12 ">
+						<p>Санкт-Петербург, 2016 год</p>
+						</div>						
+						</div>
+
+
 					</div>
 				</div>
 			</li>
@@ -86,7 +100,7 @@
 					<li>
 						<div class="cd-slider-content">
 							<div class="content-wrapper">
-								<h2>Slider #2</h2>
+								<h2>Цель и задачи исследования</h2>
 							</div>
 						</div>
 					</li>
@@ -171,8 +185,9 @@
 		</ol> <!-- .cd-slideshow -->
 	</div> <!-- .cd-slideshow-wrapper -->
 	
-<script src="js/jquery-2.1.4.js"></script>
+<script src="js/jquery-2.2.3.js"></script>
 <script src="js/jquery.mobile.custom.min.js"></script>
 <script src="js/main.js"></script> <!-- Resource jQuery -->
+<script src="js/bootstrap.js"></script> <!-- bootstrap -->
 </body>
 </html>
