--- a/index.html
+++ b/index.html
@@ -26,22 +26,18 @@
 			<div class="cd-nav-items">
 				<ol>
 					<li><a href="#slide-1">Титульный лист</a></li>
+					<li><a href="#slide-2">Цель и задачи исследования</a></li>
+					<li><a href="#slide-3">Актуальность</a></li>
+					<li><a href="#slide-4">Актуальность</a></li>
+					<li><a href="#slide-5">Актуальность</a></li>
+					<li><a href="#slide-6">Актуальность</a></li>
+					<li><a href="#slide-7">Slide 4</a></li>
+					<li><a href="#slide-8">Slide 5</a></li>
 					<li>
-						<a href="#slide-2">Цель и задачи исследования</a>
+						<a href="#slide-9">Slide 6</a>
 						<ol class="sub-nav">
-							<li><a href="#slide-2">Slide 2 - Sub 1</a></li>
-							<li><a href="#slide-2">Slide 2 - Sub 2</a></li>
-							<li><a href="#slide-2">Slide 2 - Sub 3</a></li>
-						</ol>
-					</li>
-					<li><a href="#slide-3">Slide 3</a></li>
-					<li><a href="#slide-4">Slide 4</a></li>
-					<li><a href="#slide-5">Slide 5</a></li>
-					<li>
-						<a href="#slide-6">Slide 6</a>
-						<ol class="sub-nav">
-							<li><a href="#slide-6">Slide 6 - Sub 1</a></li>
-							<li><a href="#slide-6">Slide 6 - Sub 2</a></li>
+							<li><a href="#slide-9">Slide 6 - Sub 1</a></li>
+							<li><a href="#slide-9">Slide 6 - Sub 2</a></li>
 						</ol>
 					</li>
 				</ol>
